k8s/cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  namespace: playfair
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
        - name: cart
          image: docker.io/aryansr/playfair-cart:latest
          ports:
            - containerPort: 3003
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: playfair
spec:
  selector:
    app: cart
  ports:
    - port: 3003
      targetPort: 3003
