k8s/checkout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
  namespace: playfair
spec:
  replicas: 2
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
        - name: checkout
          image: docker.io/aryansr/playfair-checkout:latest
          ports:
            - containerPort: 3004
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: playfair
spec:
  selector:
    app: checkout
  ports:
    - port: 3004
      targetPort: 3004
